--- a/ExercisesAlgo/ExercisesAlgo.csproj
+++ b/ExercisesAlgo/ExercisesAlgo.csproj
@@ -47,7 +47,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="2Pointers\Diffk.cs" />
+    <Compile Include="2Pointers\MergeSortedArrays.cs" />
     <Compile Include="2Pointers\MinimizeDifference.cs" />
+    <Compile Include="2Pointers\RemoveDublicates.cs" />
     <Compile Include="Arrays\ArrayPermutation.cs" />
     <Compile Include="Arrays\Distance.cs" />
     <Compile Include="Arrays\Duplicates.cs" />
