--- a/ExercisesAlgo/ExercisesAlgo.csproj
+++ b/ExercisesAlgo/ExercisesAlgo.csproj
@@ -54,6 +54,7 @@
     <Compile Include="2Pointers\MinimizeDifference.cs" />
     <Compile Include="2Pointers\RemoveDublicates.cs" />
     <Compile Include="2Pointers\RemoveDuplicates2.cs" />
+    <Compile Include="2Pointers\SortColors.cs" />
     <Compile Include="2Pointers\WaterTank.cs" />
     <Compile Include="Arrays\ArrayPermutation.cs" />
     <Compile Include="Arrays\Distance.cs" />
