--- a/ExercisesAlgo/ExercisesAlgo.csproj
+++ b/ExercisesAlgo/ExercisesAlgo.csproj
@@ -57,6 +57,7 @@
     <Compile Include="2Pointers\RemoveDuplicates2.cs" />
     <Compile Include="2Pointers\SortColors.cs" />
     <Compile Include="2Pointers\Sum3Zero.cs" />
+    <Compile Include="2Pointers\Triangles.cs" />
     <Compile Include="2Pointers\WaterTank.cs" />
     <Compile Include="Arrays\ArrayPermutation.cs" />
     <Compile Include="Arrays\Distance.cs" />
