--- a/ExercisesAlgo/ExercisesAlgo.csproj
+++ b/ExercisesAlgo/ExercisesAlgo.csproj
@@ -86,8 +86,10 @@
     <Compile Include="BS\RotatedArray.cs" />
     <Compile Include="BS\Sqrt.cs" />
     <Compile Include="LinkedList\DeleteDuplicates.cs" />
+    <Compile Include="LinkedList\DeleteDuplicates2.cs" />
     <Compile Include="LinkedList\Intersection.cs" />
     <Compile Include="LinkedList\ListNode.cs" />
+    <Compile Include="LinkedList\MergeSortedLists.cs" />
     <Compile Include="LinkedList\PalindromeList.cs" />
     <Compile Include="LinkedList\Reverse.cs" />
     <Compile Include="Mathe\CityTour.cs" />
