--- a/ExercisesAlgo/ExercisesAlgo.csproj
+++ b/ExercisesAlgo/ExercisesAlgo.csproj
@@ -91,7 +91,9 @@
     <Compile Include="LinkedList\ListNode.cs" />
     <Compile Include="LinkedList\MergeSortedLists.cs" />
     <Compile Include="LinkedList\PalindromeList.cs" />
+    <Compile Include="LinkedList\Removenth.cs" />
     <Compile Include="LinkedList\Reverse.cs" />
+    <Compile Include="LinkedList\RotateList.cs" />
     <Compile Include="Mathe\CityTour.cs" />
     <Compile Include="Mathe\CommonDivisor.cs" />
     <Compile Include="Mathe\ExcelColToNumber.cs" />
