--- a/ExercisesAlgo/ExercisesAlgo.csproj
+++ b/ExercisesAlgo/ExercisesAlgo.csproj
@@ -93,6 +93,7 @@
     <Compile Include="LinkedList\PalindromeList.cs" />
     <Compile Include="LinkedList\Removenth.cs" />
     <Compile Include="LinkedList\Reverse.cs" />
+    <Compile Include="LinkedList\ReverseK.cs" />
     <Compile Include="LinkedList\RotateList.cs" />
     <Compile Include="Mathe\CityTour.cs" />
     <Compile Include="Mathe\CommonDivisor.cs" />
