--- a/ExercisesAlgo/ExercisesAlgo.csproj
+++ b/ExercisesAlgo/ExercisesAlgo.csproj
@@ -86,10 +86,13 @@
     <Compile Include="BS\RotatedArray.cs" />
     <Compile Include="BS\Sqrt.cs" />
     <Compile Include="Graphs\MinimumPermutations.cs" />
+    <Compile Include="LinkedList\AddTwoNumbers.cs" />
     <Compile Include="LinkedList\DeleteDuplicates.cs" />
     <Compile Include="LinkedList\DeleteDuplicates2.cs" />
+    <Compile Include="LinkedList\EvenReverse.cs" />
     <Compile Include="LinkedList\InsertionSort.cs" />
     <Compile Include="LinkedList\Intersection.cs" />
+    <Compile Include="LinkedList\KthNodeFromMiddle.cs" />
     <Compile Include="LinkedList\ListNode.cs" />
     <Compile Include="LinkedList\MergeSort.cs" />
     <Compile Include="LinkedList\MergeSortedLists.cs" />
@@ -98,6 +101,7 @@
     <Compile Include="LinkedList\Removenth.cs" />
     <Compile Include="LinkedList\Reorder.cs" />
     <Compile Include="LinkedList\Reverse.cs" />
+    <Compile Include="LinkedList\ReverseAlternative.cs" />
     <Compile Include="LinkedList\ReverseK.cs" />
     <Compile Include="LinkedList\RotateList.cs" />
     <Compile Include="LinkedList\Swap2Nodes.cs" />
@@ -121,6 +125,7 @@
     <Compile Include="Arrays\RotateMatrix.cs" />
     <Compile Include="Arrays\SimpleQueries.cs" />
     <Compile Include="Arrays\WaveSort.cs" />
+    <Compile Include="Stacks\NearestSmallerElement.cs" />
     <Compile Include="Strings\AddBinaryStrings.cs" />
     <Compile Include="Strings\AmazingSubarrays.cs" />
     <Compile Include="Strings\Atoi.cs" />
